--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,3 +14,19 @@ body,
   width: 100%;
   font-family: "Roboto", sans-serif;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #ffc285;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #996b3d;
+}
+
+::-webkit-scrollbar-track:hover {
+  background: #ffb366;
+}
